// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`menu 1`] = `
Object {
  "f": Array [
    Array [
      "type",
      "MENU",
    ],
    Array [
      "value",
      Object {
        "$": "ReactElement",
        "children": Array [
          Object {
            "$": "ReactElement",
            "children": Array [
              "Menu3",
            ],
            "props": Object {
              "f": Array [
                Array [
                  "onClick",
                  Object {
                    "r": 0,
                  },
                ],
                Array [
                  "children",
                  Object {
                    "$": "undefined",
                  },
                ],
                Array [
                  "key",
                  ".$3",
                ],
              ],
            },
            "type": "button",
          },
        ],
        "props": Object {
          "f": Array [
            Array [
              "children",
              Object {
                "$": "undefined",
              },
            ],
          ],
        },
        "type": Object {
          "$": "Symbol",
          "key": "react.fragment",
        },
      },
    ],
  ],
  "x": Array [
    Object {
      "$": "Bind",
      "args": Array [
        Object {
          "$": "menuDispatch",
        },
        "Menu3",
        Object {
          "f": Array [
            Array [
              "type",
              "Menu3",
            ],
          ],
        },
      ],
      "f": Array [
        Array [
          "prototype",
          Object {
            "f": Array [
              Array [
                "constructor",
                Object {
                  "r": 0,
                },
                2,
              ],
            ],
          },
          3,
        ],
      ],
      "func": Object {
        "$": "_signal",
      },
      "self": null,
    },
  ],
}
`;

exports[`menu 2`] = `
Object {
  "f": Array [
    Array [
      "type",
      "MENU",
    ],
    Array [
      "value",
      Object {
        "$": "ReactElement",
        "children": Array [
          Object {
            "$": "ReactElement",
            "children": Array [
              "Menu1",
            ],
            "props": Object {
              "f": Array [
                Array [
                  "onClick",
                  Object {
                    "r": 2,
                  },
                ],
                Array [
                  "children",
                  Object {
                    "$": "undefined",
                  },
                ],
                Array [
                  "key",
                  ".$1",
                ],
              ],
            },
            "type": "button",
          },
          Object {
            "$": "ReactElement",
            "children": Array [
              "Menu3",
            ],
            "props": Object {
              "f": Array [
                Array [
                  "onClick",
                  Object {
                    "r": 3,
                  },
                ],
                Array [
                  "children",
                  Object {
                    "$": "undefined",
                  },
                ],
                Array [
                  "key",
                  ".$3",
                ],
              ],
            },
            "type": "button",
          },
        ],
        "props": Object {
          "f": Array [
            Array [
              "children",
              Object {
                "$": "undefined",
              },
            ],
          ],
        },
        "type": Object {
          "$": "Symbol",
          "key": "react.fragment",
        },
      },
    ],
  ],
  "x": Array [
    Object {
      "$": "_signal",
    },
    Object {
      "$": "menuDispatch",
    },
    Object {
      "$": "Bind",
      "args": Array [
        Object {
          "r": 1,
        },
        "Menu1",
        Object {
          "f": Array [
            Array [
              "type",
              "Menu1",
            ],
          ],
        },
      ],
      "f": Array [
        Array [
          "prototype",
          Object {
            "f": Array [
              Array [
                "constructor",
                Object {
                  "r": 2,
                },
                2,
              ],
            ],
          },
          3,
        ],
      ],
      "func": Object {
        "r": 0,
      },
      "self": null,
    },
    Object {
      "$": "Bind",
      "args": Array [
        Object {
          "r": 1,
        },
        "Menu3",
        Object {
          "f": Array [
            Array [
              "type",
              "Menu3",
            ],
          ],
        },
      ],
      "f": Array [
        Array [
          "prototype",
          Object {
            "f": Array [
              Array [
                "constructor",
                Object {
                  "r": 3,
                },
                2,
              ],
            ],
          },
          3,
        ],
      ],
      "func": Object {
        "r": 0,
      },
      "self": null,
    },
  ],
}
`;

exports[`menu 3`] = `
Object {
  "f": Array [
    Array [
      "type",
      "MENU",
    ],
    Array [
      "value",
      Object {
        "$": "ReactElement",
        "children": Array [
          Object {
            "$": "ReactElement",
            "children": Array [
              "Menu1",
            ],
            "props": Object {
              "f": Array [
                Array [
                  "onClick",
                  Object {
                    "r": 2,
                  },
                ],
                Array [
                  "children",
                  Object {
                    "$": "undefined",
                  },
                ],
                Array [
                  "key",
                  ".$1",
                ],
              ],
            },
            "type": "button",
          },
          Object {
            "$": "ReactElement",
            "children": Array [
              "Menu2",
            ],
            "props": Object {
              "f": Array [
                Array [
                  "onClick",
                  Object {
                    "r": 3,
                  },
                ],
                Array [
                  "children",
                  Object {
                    "$": "undefined",
                  },
                ],
                Array [
                  "key",
                  ".$2",
                ],
              ],
            },
            "type": "button",
          },
          Object {
            "$": "ReactElement",
            "children": Array [
              "Menu3",
            ],
            "props": Object {
              "f": Array [
                Array [
                  "onClick",
                  Object {
                    "r": 4,
                  },
                ],
                Array [
                  "children",
                  Object {
                    "$": "undefined",
                  },
                ],
                Array [
                  "key",
                  ".$3",
                ],
              ],
            },
            "type": "button",
          },
        ],
        "props": Object {
          "f": Array [
            Array [
              "children",
              Object {
                "$": "undefined",
              },
            ],
          ],
        },
        "type": Object {
          "$": "Symbol",
          "key": "react.fragment",
        },
      },
    ],
  ],
  "x": Array [
    Object {
      "$": "_signal",
    },
    Object {
      "$": "menuDispatch",
    },
    Object {
      "$": "Bind",
      "args": Array [
        Object {
          "r": 1,
        },
        "Menu1",
        Object {
          "f": Array [
            Array [
              "type",
              "Menu1",
            ],
          ],
        },
      ],
      "f": Array [
        Array [
          "prototype",
          Object {
            "f": Array [
              Array [
                "constructor",
                Object {
                  "r": 2,
                },
                2,
              ],
            ],
          },
          3,
        ],
      ],
      "func": Object {
        "r": 0,
      },
      "self": null,
    },
    Object {
      "$": "Bind",
      "args": Array [
        Object {
          "r": 1,
        },
        "Menu2",
        Object {
          "f": Array [
            Array [
              "type",
              "Menu2",
            ],
          ],
        },
      ],
      "f": Array [
        Array [
          "prototype",
          Object {
            "f": Array [
              Array [
                "constructor",
                Object {
                  "r": 3,
                },
                2,
              ],
            ],
          },
          3,
        ],
      ],
      "func": Object {
        "r": 0,
      },
      "self": null,
    },
    Object {
      "$": "Bind",
      "args": Array [
        Object {
          "r": 1,
        },
        "Menu3",
        Object {
          "f": Array [
            Array [
              "type",
              "Menu3",
            ],
          ],
        },
      ],
      "f": Array [
        Array [
          "prototype",
          Object {
            "f": Array [
              Array [
                "constructor",
                Object {
                  "r": 4,
                },
                2,
              ],
            ],
          },
          3,
        ],
      ],
      "func": Object {
        "r": 0,
      },
      "self": null,
    },
  ],
}
`;

exports[`menu 4`] = `
Object {
  "f": Array [
    Array [
      "type",
      "FLUSH",
    ],
  ],
}
`;
